--- a/app/src/main/res/layout/fragment_category_header.xml
+++ b/app/src/main/res/layout/fragment_category_header.xml
@@ -5,14 +5,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/category_toolbar"
     android:layout_width="match_parent"
-    android:layout_height="45dp"
+    android:layout_height="50dp"
     android:background="@color/colorPrimaryDark"
+    android:elevation="3dp"
     app:contentInsetLeft="0dp"
     app:contentInsetStart="0dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="45dp"
+        android:layout_height="50dp"
         android:background="@color/bg_white"
         android:focusable="true"
         android:focusableInTouchMode="true"
@@ -27,12 +28,23 @@
             android:layout_marginLeft="20dp"
             android:src="@drawable/act_home_scan_de"/>
 
+        <ImageView
+            android:id="@+id/category_btn_msg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="20dp"
+            android:src="@drawable/act_home_msg_de"/>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="35dp"
             android:layout_centerInParent="true"
-            android:layout_marginLeft="60dp"
-            android:layout_marginRight="60dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_toLeftOf="@id/category_btn_msg"
+            android:layout_toRightOf="@id/category_btn_scan"
             android:background="@drawable/btn_bg_normal"
             android:orientation="horizontal">
 
@@ -53,25 +65,14 @@
                 android:textSize="@dimen/tv_light"/>
 
             <ImageView
-                android:layout_width="30dp"
+                android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:layout_alignParentRight="true"
                 android:background="@drawable/btn_bg_gray"
-                android:padding="8dp"
+                android:padding="10dp"
                 android:src="@drawable/act_home_search_de"/>
 
 
         </RelativeLayout>
-
-
-        <ImageView
-            android:id="@+id/category_btn_msg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="20dp"
-            android:src="@drawable/act_home_msg_de"/>
-
     </RelativeLayout>
 </android.support.v7.widget.Toolbar>
