--- a/app/src/main/res/layout/activity_credit_mall_top.xml
+++ b/app/src/main/res/layout/activity_credit_mall_top.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:layout_marginBottom="3dp"
               android:orientation="vertical">
 
     <com.youth.banner.Banner
@@ -12,7 +13,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:layout_marginTop="3dp"
+        android:layout_marginTop="1dp"
         android:background="@color/bg_white"
         android:orientation="horizontal">
 
@@ -30,7 +31,7 @@
 
         <View
             android:layout_width="2px"
-            android:layout_height="40dp"
+            android:layout_height="50dp"
             android:background="@color/colorLine"
             android:layout_gravity="center_vertical"/>
 
@@ -48,7 +49,7 @@
 
         <View
             android:layout_width="2px"
-            android:layout_height="40dp"
+            android:layout_height="50dp"
             android:background="@color/colorLine"
             android:layout_gravity="center_vertical"/>
 
