--- a/app/src/main/res/layout/activity_group_buy.xml
+++ b/app/src/main/res/layout/activity_group_buy.xml
@@ -24,61 +24,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="?attr/actionBarSize"
-                android:scaleType="centerCrop"
                 android:orientation="vertical"
+                android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="1"/>
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/group_toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                app:contentInsetStart="0dp"
-
-                app:layout_collapseMode="pin"
-                app:popupTheme="@style/AppTheme.PopupOverlay">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:background="@color/bg_white"
-                    android:focusable="true"
-                    android:focusableInTouchMode="true">
-
-
-                    <ImageView
-                        android:id="@+id/brand_btn_back"
-                        android:layout_width="8dp"
-                        android:layout_height="15dp"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="20dp"
-                        android:src="@drawable/icon_back"/>
-
-
-                    <TextView
-                        style="@style/BlodTextView"
-                        android:layout_centerHorizontal="true"
-                        android:layout_centerVertical="true"
-                        android:text="团购商城"
-                        android:textSize="@dimen/tv_Blod"/>
-
-                    <ImageView
-                        android:id="@+id/brand_btn_msg"
-                        android:layout_width="22dp"
-                        android:layout_height="22dp"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginRight="20dp"
-                        android:background="@drawable/act_home_msg_de"/>
-
-                    <View
-                        style="@style/XYLine"
-                        android:layout_alignParentBottom="true"/>
-
-                </RelativeLayout>
-
-
-            </android.support.v7.widget.Toolbar>
+            <include layout="@layout/view_header_tv_msg"/>
 
 
         </android.support.design.widget.CollapsingToolbarLayout>
