--- a/app/src/main/res/layout/activity_stores.xml
+++ b/app/src/main/res/layout/activity_stores.xml
@@ -11,7 +11,7 @@
         android:layout_gravity="bottom"
         android:background="@color/bg_white"
         android:elevation="3dp"
-        android:translationZ="10dp">
+        android:translationZ="5dp">
 
         <TextView
             android:id="@+id/tv_store_introduce"
@@ -20,6 +20,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="@string/store_introduce"
+            android:textColor="@color/tv_name"
             android:textSize="@dimen/tv_Regular"/>
 
         <View
@@ -35,6 +36,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="@string/store_voucher"
+            android:textColor="@color/tv_name"
             android:textSize="@dimen/tv_Regular"/>
 
         <View
@@ -51,6 +53,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="@string/store_service"
+            android:textColor="@color/tv_name"
             android:textSize="@dimen/tv_Regular"/>
     </LinearLayout>
 
@@ -136,15 +139,16 @@
                     android:id="@+id/bt_store_fav"
                     android:layout_width="60.0dip"
                     android:layout_height="22.0dip"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
                     android:background="@color/colorPrimaryDark"
                     android:button="@null"
                     android:gravity="center_horizontal"
                     android:paddingTop="3dp"
                     android:text="+关注"
                     android:textColor="@color/bg_white"
-                    android:textSize="@dimen/tv_light"/>
+                    android:textSize="@dimen/tv_light"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"/>
 
                 <com.google.android.flexbox.FlexboxLayout
                     android:layout_width="wrap_content"
@@ -154,74 +158,7 @@
                     android:layout_toRightOf="@id/iv_store_logo"/>
             </RelativeLayout>
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/store_toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
-                app:popupTheme="@style/AppTheme.PopupOverlay">
-
-                <ImageView
-                    android:id="@+id/goodshow_btn_back"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="20dp"
-                    android:src="@drawable/icon_back_w"/>
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:focusable="true"
-                    android:focusableInTouchMode="true"
-                    android:orientation="horizontal">
-
-
-                    <LinearLayout
-                        android:layout_width="260dp"
-                        android:layout_height="30dp"
-                        android:layout_centerVertical="true"
-                        android:background="@drawable/btn_bg_normal"
-                        android:orientation="horizontal">
-
-                        <EditText
-                            android:id="@+id/goodshow_et_search"
-                            android:layout_width="230dp"
-                            android:layout_height="30dp"
-                            android:layout_centerVertical="true"
-                            android:background="@null"
-                            android:focusableInTouchMode="false"
-                            android:hint="@string/search_search_hint"
-                            android:paddingLeft="5dp"
-                            android:singleLine="true"
-                            android:textColor="@color/tv_name"
-                            android:textColorHint="@color/tv_hint"
-                            android:textSize="@dimen/tv_Normal"/>
-
-                        <ImageButton
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
-                            android:background="@drawable/btn_bg_gray"
-                            android:src="@drawable/act_home_search_de"
-                            />
-
-
-                    </LinearLayout>
-
-
-                    <ImageView
-                        android:id="@+id/goodshow_btn_msg"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginRight="15dp"
-                        android:scaleType="centerInside"
-                        android:src="@drawable/act_home_msg"/>
-
-                </RelativeLayout>
-
-            </android.support.v7.widget.Toolbar>
-
+            <include layout="@layout/activity_store_header"/>
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
@@ -250,10 +187,9 @@
             app:tl_textSelectColor="@color/colorPrimaryDark"
             app:tl_textUnselectColor="@color/tv_name"
             app:tl_textsize="@dimen/tv_Regular"
+            android:elevation="3dp"
             app:tl_underline_gravity="BOTTOM"/>
 
-        <View
-            style="@style/LightLine"/>
 
         <android.support.v4.view.ViewPager
             android:id="@+id/vp_content"
