--- a/app/src/main/res/layout/fragment_footer_item.xml
+++ b/app/src/main/res/layout/fragment_footer_item.xml
@@ -7,7 +7,9 @@
               android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/iv_good_img"
         android:layout_width="match_parent"
+        android:scaleType="fitXY"
         android:layout_height="115dp"/>
 
 
