--- a/app/src/main/res/layout/fragment_good_eva_tab.xml
+++ b/app/src/main/res/layout/fragment_good_eva_tab.xml
@@ -3,7 +3,8 @@
               android:layout_height="45dp"
               android:background="@color/bg_white"
               android:orientation="horizontal"
-              android:paddingTop="6dp">
+              android:elevation="1dp"
+              android:paddingTop="8dp">
 
     <LinearLayout
         android:id="@+id/ll_eva_all"
@@ -37,6 +38,7 @@
     <View
         android:layout_width="1px"
         android:layout_height="match_parent"
+        android:layout_marginBottom="6dp"
         android:background="@color/colorLine"/>
 
     <LinearLayout
@@ -71,6 +73,7 @@
     <View
         android:layout_width="1px"
         android:layout_height="match_parent"
+        android:layout_marginBottom="6dp"
         android:background="@color/colorLine"/>
 
     <LinearLayout
@@ -105,6 +108,7 @@
     <View
         android:layout_width="1px"
         android:layout_height="match_parent"
+        android:layout_marginBottom="6dp"
         android:background="@color/colorLine"/>
 
     <LinearLayout
@@ -139,6 +143,7 @@
     <View
         android:layout_width="1px"
         android:layout_height="match_parent"
+        android:layout_marginBottom="6dp"
         android:background="@color/colorLine"/>
 
     <LinearLayout
