--- a/app/src/main/res/layout/fragment_home_header.xml
+++ b/app/src/main/res/layout/fragment_home_header.xml
@@ -6,6 +6,7 @@
     android:id="@+id/home_toolbar"
     android:layout_width="match_parent"
     android:layout_height="45dp"
+    android:elevation="3dp"
     app:contentInsetLeft="0dp"
     app:contentInsetStart="0dp">
 
