--- a/app/src/main/res/layout/fragment_store_top.xml
+++ b/app/src/main/res/layout/fragment_store_top.xml
@@ -3,14 +3,13 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:layout_marginTop="3dp"
               android:orientation="vertical">
 
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="105dp"
+        android:layout_height="110dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
         />
@@ -33,8 +32,6 @@
             android:id="@+id/store__home_tabs"
             android:layout_width="match_parent"
             android:layout_height="35dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
             android:layout_marginTop="3dp"
             android:background="@color/bg_white"
             app:tl_indicator_color="@color/colorPrimaryDark"
@@ -59,8 +56,10 @@
         android:layout_weight="1"/>
 
     <TextView
-      style="@style/NormalTextView"
+        style="@style/NormalTextView"
+        android:layout_width="match_parent"
         android:layout_marginTop="3dp"
+        android:background="@color/bg_white"
         android:paddingBottom="5dp"
         android:paddingLeft="10dp"
         android:paddingTop="5dp"
