--- a/app/src/main/res/layout/view_header_tv_msg.xml
+++ b/app/src/main/res/layout/view_header_tv_msg.xml
@@ -5,15 +5,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar_iv"
     android:layout_width="match_parent"
-    android:layout_height="45dp"
-    android:elevation="1dp"
+    android:layout_height="50dp"
+    android:elevation="3dp"
     android:background="@color/colorPrimaryDark"
+    app:layout_collapseMode="pin"
+    app:popupTheme="@style/AppTheme.PopupOverlay"
     app:contentInsetLeft="0dp"
     app:contentInsetStart="0dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="45dp"
+        android:layout_height="50dp"
         android:background="@color/bg_white"
         android:focusable="true"
         android:focusableInTouchMode="true"
